# incidenceeditor

./: .clang-tidy  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  CMakePresets.json  KF5IncidenceEditorConfig.cmake.in  KF5IncidenceEditorsngConfig.cmake.in  KPimIncidenceEditorConfig.cmake.in  REUSE.toml  config-enterprise.h.cmake  cppcheck-suppressions.xml  incidenceeditor.categories  incidenceeditor.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  conflictresolvertest.cpp  conflictresolvertest.h  incidencedatetimetest.cpp  ktimezonecomboboxtest.cpp  ktimezonecomboboxtest.h  modeltest.cpp  modeltest.h  testfreebusyganttproxymodel.cpp  testfreebusyganttproxymodel.h  testindividualmaildialog.cpp
po/ar/: libincidenceeditors.po  libincidenceeditors6.po
po/ast/: libincidenceeditors.po  libincidenceeditors6.po
po/bg/: libincidenceeditors.po  libincidenceeditors6.po
po/bs/: libincidenceeditors.po  libincidenceeditors6.po
po/ca/: libincidenceeditors.po  libincidenceeditors6.po
po/ca@valencia/: libincidenceeditors.po  libincidenceeditors6.po
po/cs/: libincidenceeditors.po  libincidenceeditors6.po
po/da/: libincidenceeditors.po  libincidenceeditors6.po
po/de/: libincidenceeditors.po  libincidenceeditors6.po
po/el/: libincidenceeditors.po  libincidenceeditors6.po
po/en_GB/: libincidenceeditors.po  libincidenceeditors6.po
po/eo/: libincidenceeditors.po  libincidenceeditors6.po
po/es/: libincidenceeditors.po  libincidenceeditors6.po
po/et/: libincidenceeditors.po  libincidenceeditors6.po
po/eu/: libincidenceeditors.po  libincidenceeditors6.po
po/fi/: libincidenceeditors.po  libincidenceeditors6.po
po/fr/: libincidenceeditors.po  libincidenceeditors6.po
po/ga/: libincidenceeditors.po  libincidenceeditors6.po
po/gl/: libincidenceeditors.po  libincidenceeditors6.po
po/hi/: libincidenceeditors6.po
po/hu/: libincidenceeditors.po  libincidenceeditors6.po
po/ia/: libincidenceeditors.po  libincidenceeditors6.po
po/it/: libincidenceeditors.po  libincidenceeditors6.po
po/ja/: libincidenceeditors.po  libincidenceeditors6.po
po/ka/: libincidenceeditors.po  libincidenceeditors6.po
po/kk/: libincidenceeditors.po  libincidenceeditors6.po
po/ko/: libincidenceeditors.po  libincidenceeditors6.po
po/lt/: libincidenceeditors.po  libincidenceeditors6.po
po/mai/: libincidenceeditors.po  libincidenceeditors6.po
po/mr/: libincidenceeditors.po  libincidenceeditors6.po
po/nb/: libincidenceeditors.po  libincidenceeditors6.po
po/nds/: libincidenceeditors.po  libincidenceeditors6.po
po/nl/: libincidenceeditors.po  libincidenceeditors6.po
po/pa/: libincidenceeditors.po  libincidenceeditors6.po
po/pl/: libincidenceeditors.po  libincidenceeditors6.po
po/pt/: libincidenceeditors.po  libincidenceeditors6.po
po/pt_BR/: libincidenceeditors.po  libincidenceeditors6.po
po/ro/: libincidenceeditors.po  libincidenceeditors6.po
po/ru/: libincidenceeditors.po  libincidenceeditors6.po
po/sa/: libincidenceeditors6.po
po/sk/: libincidenceeditors.po  libincidenceeditors6.po
po/sl/: libincidenceeditors.po  libincidenceeditors6.po
po/sv/: libincidenceeditors.po  libincidenceeditors6.po
po/ta/: libincidenceeditors.po  libincidenceeditors6.po
po/tr/: libincidenceeditors.po  libincidenceeditors6.po
po/ug/: libincidenceeditors.po  libincidenceeditors6.po
po/uk/: libincidenceeditors.po  libincidenceeditors6.po
po/zh_CN/: libincidenceeditors.po  libincidenceeditors6.po
po/zh_TW/: libincidenceeditors.po  libincidenceeditors6.po
src/: CMakeLists.txt  Messages.sh  alarmdialog.cpp  alarmdialog.h  alarmpresets.cpp  alarmpresets.h  attachmenteditdialog.cpp  attachmenteditdialog.h  attachmenticonview.cpp  attachmenticonview.h  attendeecomboboxdelegate.cpp  attendeecomboboxdelegate.h  attendeedata.cpp  attendeedata.h  attendeeeditor.cpp  attendeeeditor.h  attendeeline.cpp  attendeeline.h  attendeelineeditdelegate.cpp  attendeelineeditdelegate.h  attendeetablemodel.cpp  attendeetablemodel.h  autochecktreewidget.cpp  autochecktreewidget.h  categorydialog.cpp  categorydialog.h  categoryeditdialog.cpp  categoryeditdialog.h  categoryselectdialog.cpp  categoryselectdialog.h  combinedincidenceeditor.cpp  combinedincidenceeditor.h  conflictresolver.cpp  conflictresolver.h  editorconfig.cpp  editorconfig.h  editoritemmanager.cpp  editoritemmanager.h  freebusyganttproxymodel.cpp  freebusyganttproxymodel.h  (+69 more)
src/app/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  main.cpp
src/ui/: alarmdialog.ui  attachmenteditdialog.ui  categorydialog_base.ui  categoryselectdialog_base.ui  dialogdesktop.ui  resourcemanagement.ui  schedulingdialog.ui  template_management_dialog_base.ui
tests/: CMakeLists.txt  individualmaildialog_test.cpp  resourcemanagment_gui.cpp
